favicon update, font update and padding on update content.

--- a/client/app/styles/toast.less
+++ b/client/app/styles/toast.less
@@ -8,3 +8,8 @@ md-toast.md-default-theme .md-toast-content, md-toast .md-toast-content {
   border-radius: 0;
   box-shadow: none;
 }
+
+
+md-toast .md-toast-content {
+    padding: 30px;
+}
