input styling fixes.

--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -81,4 +81,5 @@ md-toast button.md-button,
 md-toast button.md-button:not(.md-icon-button):not(.menu-button) {
   color: @light-grey;
   height: auto;
+  texr-align: center;
 }
