--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -36,6 +36,7 @@ md-input-container {
 
     padding-left: 0;
     padding-right: 0;
+    padding-bottom: 10px !important;
 
     margin-bottom: 2px;
 
