UI touches on login screen. also changed input colour text.

--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -33,6 +33,7 @@ md-input-container {
   input,
   input.md-input {
     border-radius: 0;
+    color: @dark-grey;
 
     padding-left: 0;
     padding-right: 0;
