--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -6,7 +6,7 @@
 
     .title.login-title
       .title-container.login-title-container
-        h1 Login
+        h1 Login to Leads
 
 
     form(name='emailRegisterForm' ng-submit='submitEmail(emailRegisterForm, state.email)' novalidate='' autocomplete='off')
