input colour and h1 styling

--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -95,7 +95,7 @@ md-input-container {
   }
 
 
-  @placeholder-color: @deep-blue;
+  @placeholder-color: @medium-grey;
   input:placeholder { color: @placeholder-color; }
   textarea:placeholder { color: @placeholder-color; }
   input::placeholder { color: @placeholder-color; }
