--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -48,8 +48,7 @@ form {
     color: @deep-blue;
   }
 
-  &.login-title,
-  &.grey-title {
+  .grey-title {
     h1 {
       color: @medium-grey;
     }
@@ -117,6 +116,3 @@ form {
 .container.ng-enter.ng-enter-active {
   opacity: 1;
 }
-
-
-
