--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -3,7 +3,7 @@
 .container(ng-if='! successful')
   .inner-container
 
-    .title.small-title.grey-title
+    .title.small-title
       .title-container
         h1 What lead would you like to tell us about?
 
