--- a/client/app/styles/modal.less
+++ b/client/app/styles/modal.less
@@ -4,12 +4,16 @@
 
 .md-dialog-container {
 
-  display: inline-block;
   z-index: 120;
 
-  //TODO add class to dialog if we are using any more
-
   md-dialog {
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  md-dialog[aria-label="Are you sure? ..."] {
+
+    align-self: baseline;
 
     background-color: @dark-blue;
     h2 {
@@ -25,8 +29,6 @@
       }
     }
 
-    border-radius: 0;
-    box-shadow: none;
     width: 100%;
     max-width: 100%;
 
