--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -9,7 +9,7 @@
 
     form
 
-      md-button What kind of leads should I send?
+      md-button(ng-click='showAddToHomescreenModel($event)') What kind of leads should I send?
 
       md-button How do I add Leads to my homescreen?
 
