--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -5,12 +5,12 @@
 
     .title.small-title.grey-title
       .title-container
-        h1 (Work in progress)
+        //h1
 
     form
 
-      md-button(ng-click='showAddToHomescreenModel($event)') What kind of leads should I send?
+      //md-button What kind of leads should I send?
 
-      md-button How do I add Leads to my homescreen?
+      md-button(ng-click='showAddToHomescreenModel($event)') Add Leads to my homescreen
 
-      md-button How do I use speech to text?
+      md-button Use speech to text
