--- a/client/components/modal/addToHomescreenModal.jade
+++ b/client/components/modal/addToHomescreenModal.jade
@@ -1,4 +1,24 @@
 
-.custom-modal.info-modal
+md-dialog.add-to-homescreen-modal.custom-modal.info-modal
 
-  h1 Add to homescreen modal
+  md-tabs(md-dynamic-height, md-center-tabs=true, md-selected='currentTab')
+
+    md-tab(label='One')
+      img(style='max-height: {{maxImgHeight}}px;' src='assets/images/android-add-to-homescreen-1.png')
+      .button-container
+        md-button(ng-click='hideModal($event)') Back
+        md-button(ng-click='currentTab = 1') Next
+
+
+    md-tab(label='Two')
+      img(style='max-height: {{maxImgHeight}}px;' src='assets/images/android-add-to-homescreen-2.png')
+      .button-container
+        md-button(ng-click='currentTab = 0') Back
+        md-button(ng-click='currentTab = 2') Next
+
+    md-tab(label='Three')
+      img(style='max-height: {{maxImgHeight}}px;' src='assets/images/android-add-to-homescreen-3.png')
+      .button-container
+        md-button(ng-click='currentTab = 1') Back
+        md-button(ng-click='hideModal($event)') Done
+
