added ios images

--- a/client/app/styles/modal.less
+++ b/client/app/styles/modal.less
@@ -11,13 +11,14 @@
     box-shadow: none;
   }
 
-  md-dialog.add-to-homescreen-modal {
+  md-dialog.info-modal {
     max-width: 90%;
     min-height: 80%;
     img {
       width: auto;
       max-width: 100%;
-      max-height: 100%;
+      //max-height: 100%;
+      max-height: 86%;
     }
 
     md-tabs-wrapper {
@@ -26,7 +27,6 @@
 
     md-tab-content > div {
       margin-bottom: -4px;
-      //margin-right: -1px;
     }
 
     .button-container {
