--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -13,4 +13,4 @@
 
       md-button(ng-click='showAddToHomescreenModel($event)') Add Leads to my homescreen
 
-      md-button Use speech to text
+      md-button(ng-click='showUseSpeechToTextModel($event)') Use speech to text
