fixed up reset modal

--- a/client/app/styles/modal.less
+++ b/client/app/styles/modal.less
@@ -39,6 +39,7 @@
     }
   }
 
+  md-dialog[aria-label="You will lose ..."],
   md-dialog[aria-label="Are you sure? ..."] {
 
     align-self: baseline;
