--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -6,7 +6,7 @@
 
     //.beta DEMO
 
-    .logo-container
+    .logo-container(tabindex='-1' ng-click='main()')
       //include ../../assets/svg/logo.svg
       include ../../assets/svg/logo-round.svg
 
