added swipe to modal

--- a/client/components/modal/addToHomescreenModal.jade
+++ b/client/components/modal/addToHomescreenModal.jade
@@ -1,7 +1,7 @@
 
 md-dialog.add-to-homescreen-modal.custom-modal.info-modal
 
-  md-tabs(md-dynamic-height, md-center-tabs=true, md-selected='currentTab')
+  md-tabs(md-dynamic-height, md-swipe-content=true md-center-tabs=true, md-selected='currentTab')
 
     md-tab(label='One')
       .img-container(style='height: {{maxImgHeight}}px;')
