--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -39,6 +39,7 @@ form {
       margin-right: 18px;
       margin-top: 4px;
       padding-bottom: 0;
+      flex-shrink: 0;
     }
   }
 
@@ -48,7 +49,7 @@ form {
     color: @deep-blue;
   }
 
-  .grey-title {
+  &.grey-title {
     h1 {
       color: @medium-grey;
     }
