fixed up Antons l2code

--- a/client/components/modal/useSpeechToTextModal.jade
+++ b/client/components/modal/useSpeechToTextModal.jade
@@ -5,8 +5,8 @@ md-dialog.speech-to-text-modal.custom-modal.info-modal
 
     md-tab(label='One')
       .img-container(style='height: {{maxImgHeight}}px;')
-        img(ng-if='isAndroid' src='assets/images/android-speech-to-text.png')
-        img(ng-if='isIOS' src='assets/images/ios-speech-to-text.jpeg')
+        img(ng-if='isAndroid' src='assets/images/android-speech-to-text.jpg')
+        img(ng-if='isIOS' src='assets/images/ios-speech-to-text.jpg')
 
       .button-container
         md-button(ng-click='hideModal($event)') Back
