--- a/client/components/modal/addToHomescreenModal.jade
+++ b/client/components/modal/addToHomescreenModal.jade
@@ -5,8 +5,8 @@ md-dialog.add-to-homescreen-modal.custom-modal.info-modal
 
     md-tab(label='One')
       .img-container(style='height: {{maxImgHeight}}px;')
-        img(ng-if='isAndroid' src='assets/images/android-add-to-homescreen-1.png')
-        img(ng-if='isIOS' src='assets/images/ios-add-to-homescreen-1.jpeg')
+        img(ng-if='isAndroid' src='assets/images/android-add-to-homescreen-1.jpg')
+        img(ng-if='isIOS' src='assets/images/ios-add-to-homescreen-1.jpg')
       .button-container
         md-button(ng-click='hideModal($event)') Back
         md-button(ng-click='currentTab = 1') Next
@@ -14,16 +14,16 @@ md-dialog.add-to-homescreen-modal.custom-modal.info-modal
 
     md-tab(label='Two')
       .img-container(style='height: {{maxImgHeight}}px;')
-        img(ng-if='isAndroid' src='assets/images/android-add-to-homescreen-2.png')
-        img(ng-if='isIOS' src='assets/images/ios-add-to-homescreen-2.jpeg')
+        img(ng-if='isAndroid' src='assets/images/android-add-to-homescreen-2.jpg')
+        img(ng-if='isIOS' src='assets/images/ios-add-to-homescreen-2.jpg')
       .button-container
         md-button(ng-click='currentTab = 0') Back
         md-button(ng-click='currentTab = 2') Next
 
     md-tab(label='Three')
       .img-container(style='height: {{maxImgHeight}}px;')
-        img(ng-if='isAndroid' src='assets/images/android-add-to-homescreen-3.png')
-        img(ng-if='isIOS' src='assets/images/ios-add-to-homescreen-3.jpeg')
+        img(ng-if='isAndroid' src='assets/images/android-add-to-homescreen-3.jpg')
+        img(ng-if='isIOS' src='assets/images/ios-add-to-homescreen-3.jpg')
       .button-container
         md-button(ng-click='currentTab = 1') Back
         md-button(ng-click='hideModal($event)') Done
