login flow and welcome splash screen

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -58,5 +58,6 @@ md-content {
 @import '../components/bbq-feedback/bbq-feedback.less';
 @import '../components/bbq-info/bbq-info.less';
 @import '../components/bbq-login/bbq-login.less';
+@import '../components/bbq-welcome/bbq-welcome.less';
 @import '../components/navbar/navbar.less';
 /* endinject */
