--- a/client/components/bbq-welcome/bbq-welcome.jade
+++ b/client/components/bbq-welcome/bbq-welcome.jade
@@ -11,5 +11,6 @@
     form
 
       p This a tool to help you capture and pass on new work opportunities for Solnet
+      br
 
-      md-button(ng-click='gotoMain($event)') Ok, got it!
+      md-button.bold-button(ng-click='gotoMain($event)') Ok, got it!
