--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -11,6 +11,8 @@
 
       //md-button What kind of leads should I send?
 
+      md-button(ng-click='showFeedbackModel($event)') How can we make leads better
+
       md-button(ng-click='showAddToHomescreenModel($event)') Add Leads to my homescreen
 
       md-button(ng-click='showUseSpeechToTextModel($event)') Use speech to text
