--- a/client/app/styles/modal.less
+++ b/client/app/styles/modal.less
@@ -11,6 +11,14 @@
     box-shadow: none;
   }
 
+  md-dialog.feedback-modal {
+
+    width: 80%;
+    max-width: 600px;
+
+    min-height: 220px;
+  }
+
   md-dialog.info-modal {
     max-width: 90%;
     min-height: 80%;
