Added token login using uuid token

--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -13,7 +13,7 @@
 
 .navbar-container-inner {
   margin-bottom: 40px;
-  background-color: @dark-blue;
+  background-color: @deep-blue;
   height: 40px;
 }
 
