--- a/client/components/bbq-feedback/bbq-feedback.less
+++ b/client/components/bbq-feedback/bbq-feedback.less
@@ -12,7 +12,39 @@ bbq-feedback {
 
 
   button.md-button.advance-button {
-    top: 20px;
+    top: 6px;
+  }
+
+  .bottom-actions-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+
+  .advance-container {
+
+
+    overflow-y: hidden;
+    max-height: 500px;
+
+    &.ng-leave {
+      transition: max-height 400ms ease-out;
+      max-height: 500px;
+      &.ng-leave-active {
+        max-height: 0;
+      }
+    }
+
+
+
+    &.ng-enter {
+      transition: max-height 400ms ease-in;
+      max-height: 0;
+      &.ng-enter-active {
+        max-height: 500px;
+      }
+    }
+
   }
 
 }
