--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -78,4 +78,4 @@
 
 
     form(novalidate)
-      md-button.bold-button(ng-click='resetFeedback()', type='button') New lead
+      md-button.new-lead-button.bold-button(ng-click='resetFeedback()', type='button') Enter a new lead
