--- a/client/components/bbq-feedback/bbq-feedback.less
+++ b/client/components/bbq-feedback/bbq-feedback.less
@@ -20,9 +20,12 @@ bbq-feedback {
     justify-content: space-between;
   }
 
+  button.new-lead-button {
+    max-width: 250px;
+  }
+
 
   .advance-container {
-
 
     overflow-y: hidden;
     max-height: 400px;
