--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -26,7 +26,7 @@
           md-menu-item
             md-button.menu-button(ng-click='reload()')
               refresh-svg
-              | Reset
+              | Clear
           md-menu-item(ng-if='showAdmin()')
             md-button.menu-button(ng-click='admin()')
               settings-svg
